# zifopybuilder

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml  test_and_build.yml
tests/: Dockerfile  test_builder_cli.py  tests.sh
zifopybuilder/: __about__.py  __init__.py  build_toml.py  builder_cli.py
zifopybuilder/templates/: gitignore  pyproject.toml  settings.json
