[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zifopybuilder"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "0BSD"
keywords = []
authors = [
  { name = "Ross Burton", email = "Ross.Burton@zifornd.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/zifopybuilder#readme"
Issues = "https://github.com/unknown/zifopybuilder/issues"
Source = "https://github.com/unknown/zifopybuilder"

[tool.hatch.version]
path = "zifopybuilder/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "flake8",
    "pre-commit"
]
post-install-commands = [
    "pre-commit install"
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=example --cov=tests {args}"
no-cov = "cov --no-cov {args}"
check = [
  "flake8 .",
  "black --check --diff .",
  "isort --check-only --diff .",
]
fmt = [
  "isort .",
  "black .",
  "check",
]

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "zifopybuilder/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
