[tool.poetry]
name = "zifopybuilder"
version = "0.2.0"
description = "Command line tool for setting up Zifo Python projects that conform to best practices"
authors = ["Ross Burton <Ross.Burton@zifornd.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
click = "^8.0.1"
toml = "^0.10.2"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
pre-commit = "^2.21.0"

[tool.poetry.scripts]
zifopybuilder = "zifopybuilder.builder_cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
