[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PROJECTNAME"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "0BSD"
keywords = []
authors = [
  { name = "NAME", email = "EMAIL" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/PROJECTNAME#readme"
Issues = "https://github.com/unknown/PROJECTNAME/issues"
Source = "https://github.com/unknown/PROJECTNAME"

[tool.hatch.version]
path = "example/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "flake8",
    "pre-commit"
]
post-install-commands = [
    "git init",
    "curl https://raw.githubusercontent.com/zifods/setup_templates/main/.gitignore > .gitignore",
    "curl https://raw.githubusercontent.com/zifods/setup_templates/main/.pre-commit-config.yaml > .pre-commit-config.yaml",
    "pre-commit install"
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=example --cov=tests {args}"
no-cov = "cov --no-cov {args}"
check = [
  "flake8 .",
  "black --check --diff .",
  "isort --check-only --diff .",
]
fmt = [
  "isort .",
  "black .",
  "check",
]

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "PROJECTNAME/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
